# INGRID

./: .#setup.py  .gitignore  .gitignore~  .readthedocs.yaml  COMMIT_EDITMSG  HEAD  IngridParameterDescriptions.txt  Makefile  ORIG_HEAD  README.md  Subgrid Log.txt  conda_env.yaml  conda_env.yml  gitdir  index  noninteractive_FPP_Example.yml  noninteractive_FPP_patches.npy  py37.yml  pyproject.toml  requirements.txt  setup.py
.eggs/: setuptools_git_version-1.0.3-py3.7.egg
.github/: pull_request_template.md
Docs/: INGRID_YAML_CONTROLS.txt  IngridParameterDescriptions.txt  Makefile
Examples/: CL_startup.py  GUI_startup.py  LimiterData_1596822174.npy  StartGUI.py  cl2.py  gridue  neqdsk_5_LimiterData.npy  plate_E1_data.npy  plate_W1_data.npy  plate_W2_data.npy  sf45adx.py  test.npy
INGRID/: DistribFunc.py  EQLoader.py  ImportEqFiles.py  OMFITgeqdsk.py  _geometry.py  cleanup.py  conda_env.yml  config.py  exceptions.py  geometry (jguterl-virtual-machine's conflicted copy 2020-09-16).py  geometry.py  gridue_to_bout.py  ingrid (jguterl-virtual-machine's conflicted copy 2020-09-16).py  ingrid.py  interpol.py  line_tracing.py  makefile  setup.py  test.yml  udsym_tools.py  utils (jguterl-virtual-machine's conflicted copy 2020-09-16).py  utils.py  validator.py
INGRID.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Parameter Files/: ADX.yml  DIIID_DNL.yml  DIIID_SNL.yml  LSN_YAML_EXAMPLE.yml  LSN_toy.yml  SF45.yml  SPARC_SF.yml  USN_YAML_EXAMPLE.yml  cmod_param.yml  cmod_param_dnl.yml  d3d_DNL.yaml  d3d_param.yml
Uedge/: README
aholm_mar1719_7/: tran_B0  (+310 more)
(+532 files in other folders)
