[project]
name = "INGRID"
url = 'https://github.com/LLNL/INGRID'
description = "Tokamak edge plasma grid generator"
readme = "README.md"
license = {text = "MIT License"}
authors = [
    {name = "B. Garcia", email = "garcia299@llnl.gov"},
    {name = "M. Umansky", email = "umansky1@llnl.gov"},
    {name = "J. Guterl"}
]
keywords = ["grid", "mesh", "generator", "tokamak", "edge", "plasma", "efit", "uedge"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Software Development",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9"
]
requires-python = ">=3.8,<4.0"
dependencies = [
    'm2r2',
    'scipy >=1.3.1',
    'numpy >=1.20.0',
    'pyyaml',
    'matplotlib',
    'tk',
    'sympy',
    'freeqdsk'
]
dynamic = ['version']

[build-system]
requires = ["setuptools>=61.0", "setuptools-git-version", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-version]
template = "{tag}"

[tool.setuptools]
packages = ['INGRID']

